//order.proto
syntax = "proto3";

package orderPackage;

service Order {
    rpc createOrder(OrderRequest) returns (OrderResponse);
    rpc getOrdersByUserId(UserIdRequest) returns (OrderList);
}

message OrderRequest {
    string userId = 1;
    repeated OrderItem items = 2;
}

message UserIdRequest {
    string userId = 1;
}

message OrderItem {
    string menuItemId=1;
    int32 quantity = 2;
}

message OrderResponse {
    string orderId = 1;
    string createdAt = 2;
    string status = 3;
    repeated OrderItem items = 4;
}

message OrderList {
    repeated OrderResponse orders = 1;
}